--- a/server/package.json
+++ b/server/package.json
@@ -21,6 +21,7 @@
   },
   "homepage": "https://github.com/leeweisberger/Appengine_Slither#readme",
   "dependencies": {
-    "express": "^4.16.2"
+    "express": "^4.16.2",
+    "socket.io": "^2.0.4"
   }
 }
